# msa-2-project-logging-in-docker

./: .gitignore  Makefile  README.md  docker-compose.yml  project_options.md
app/: Dockerfile  main.py  pyproject.toml
promtail/: config.yml
