[project]
name = "logging-demo"
version = "0.1.0"
description = "Simple FastAPI app for Docker logging demonstration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
